tests/baselines/reference/accessorWithInitializer.errors.txt
<<<<<<< HEAD
accessorWithInitializer.ts(4,10): error TS1052: 'set' accessor parameter cannot have an initializer.
accessorWithInitializer.ts(5,17): error TS1052: 'set' accessor parameter cannot have an initializer.
=======
==== tests/cases/compiler/accessorWithInitializer.ts (2 errors) ====
    // target: es5
    
    class C {
        set X(v = 0) { }
              ~~~~~
!!! accessorWithInitializer.ts(4,11): error TS1052: 'set' accessor parameter cannot have an initializer.
        static set X(v2 = 0) { }
                     ~~~~~~
<<<<<<< HEAD
!!! error TS1052: 'set' accessor parameter cannot have an initializer.
    }
>>>>>>> b9bbbf1... Improve error baseline reporting
=======
!!! accessorWithInitializer.ts(5,18): error TS1052: 'set' accessor parameter cannot have an initializer.
    }
>>>>>>> d7cb924... Use tsc.js-style error messages in error baselines
